--- a/src/pages/Proof/proof.module.css
+++ b/src/pages/Proof/proof.module.css
@@ -17,12 +17,16 @@
   }
   
   .image_container_div {
-    padding-left: 30%;
+
+ 
+
   }
+
   
   .image_container {
     width: 900px; /* Adjust the width as needed */
     border-radius: 25px; /* Add rounded corners */
+margin-left: 20%;
   }
   
   /* Media query for smaller screens */
@@ -46,29 +50,9 @@
     .image_container {
       width: 100%; /* Make the image container full-width for smaller screens */
       border-radius: 25px; /* Keep rounded corners for smaller screens */
+      padding-left: 00%;
+      margin-left: 0%;
     }
   }
   
   /* Media query for tablets with a width of 1024 pixels and above */
-  @media (min-width: 1024px) {
-    .proofmain {
-      padding-left: 20%; /* Reset padding for tablets */
-      padding-bottom: 0;
-    }
-  
-    .proof_heading {
-      font-size: 60px; /* Reset font size for tablets */
-    }
-  
-    .image_container_div {
-      padding-top: 0;
-      padding-left: 30%; /* Reset padding for tablets */
-      padding-right: 0;
-    }
-  
-    .image_container {
-      width: 900px; /* Reset image container width for tablets */
-      border-radius: 25px; /* Reset rounded corners for tablets */
-    }
-  }
-  
